--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
                     <a href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a>
                     <a href="https://twitter.com/?lang=en"><ion-icon name="logo-twitter"></ion-icon></a>
-                    <a href="https://www.google.com/"><ion-icon name="logo-google"></ion-icon></a>
+                    <a href="https://accounts.google.com/v3/signin/identifier?ifkv=ASKXGp1019KAYuzJznD4AEDfGCA0o1xQAVqoBhVqeqNUahVY8ZqT5bTNI1mkeDLsLHqx1Hf_EuTq&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1610239743%3A1706687906240064&theme=glif"><ion-icon name="logo-google"></ion-icon></a>
                     <a href="https://www.skype.com/en/"><ion-icon name="logo-skype"></ion-icon></a>
                 </div>
             </div>
